client cursor with alpha is not scaled properly
Affected version
Using gnome-shell 42.4 on gentoo with mesa 22.1.7 (Mesa Intel® Iris® Graphics 540 (SKL GT3))
Bug summary
The cursor is misplaced using wlfreerdp 2.8.1 . After investigations it seems that using WL_SHM_FORMAT_XRGB8888 instead of WL_SHM_FORMAT_ARGB8888 as cursor buffer format solve the scaling and misplacement issue. The description of investigation of the issue can be found in [1]
Steps to reproduce
- Set screen scale to 2
- run wlfreerdp to connect to a remote desktop
- move the mouse around the wlfreerdp window to get different cursor shape and notice the misplaced cursor.
What happened
The cursor is too small and misplaced.
What did you expect to happen
The cursor should be scaled and correctly placed according the screen scale.
Relevant logs, screenshots, screencasts etc.
[1] https://github.com/FreeRDP/FreeRDP/issues/6722#issuecomment-1283051667